# Gravity_Simulation

./: LICENSE  pyproject.toml  requirements.txt
src/: main.py
src/api/: main_api.py  simulation_manager.py  tasks.py
src/api/domain/: celestial_body.py  gravity_simulation.py
src/application/: input_handler.py  simulation_service.py
src/domain/: celestial_body.py  gravity_simulation.py  vector2d.py
src/frontend/: app.py
src/infrastructure/: pygame_renderer.py
tests/unit/: test_celestial_body.py  test_gravity_simulation.py  test_vector2d.py
