[project]
name = "gravity-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "jupyterlab>=4.4.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "vpython>=7.6.5",
]
